reset the cached ascent if the block is empty, bug 206516 r/sr=roc